[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asyncpg_vector"
description = "PostgreSQL vector support for asyncpg"
readme = { file = "README.md", content-type = "text/markdown" }
keywords = ["asyncpg", "postgresql-extension", "vector", "vector-search"]
license = "MIT"
authors = [
    { name = "Levente Hunyadi", email = "hunyadi@gmail.com" }
]
maintainers = [
    { name = "Levente Hunyadi", email = "hunyadi@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed"
]
dependencies = [
    "asyncpg >= 0.30",
    "typing-extensions >= 4.15; python_version < '3.11'"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "asyncpg-stubs >= 0.30",
    "build >= 1.3",
    "mypy >= 1.18",
    "ruff >= 0.14"
]

[project.urls]
"Homepage" = "https://github.com/hunyadi/asyncpg_vector"
"Source" = "https://github.com/hunyadi/asyncpg_vector"

[tool.setuptools]
include-package-data = true
packages = ["asyncpg_vector"]
zip-safe = true

[tool.setuptools.dynamic]
version = { attr = "asyncpg_vector.__version__" }

[tool.setuptools.package-data]
"asyncpg_vector" = ["py.typed"]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "B", "I", "Q"]
